# conflicto-armado-en-cifras

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup_project.py
data/data_split/: departamento.csv  grupo_poblacional.csv  hecho_victimizante.csv  reporte_grupo.csv  reporte_hecho.csv
data/processed/: outliers.csv  resumen_outliers.csv  victimas_por_hechos_departamental_20250416.csv
data/raw/: victimas_por_hechos_departamental_20250416.csv
database/: Modelo Relacional.drawio
database/queries/: geograficas.sql  perfil demografico.sql  select all.sql
database/scripts/: schema.sql
docs/diagrams/: etl_medallion_flow.drawio
docs/planeacion/: enunciado base de datos.md  proyecto conflicto armado.md
notebooks/: 01_preanalisis_exploratorio_victimas.ipynb  02_limpieza_datos_victimas.ipynb  03_poblacion_base_datos_victimas.ipynb  04_poblacion_base_datos_victimas.ipynb  analisis_exploratorio_victimas.ipynb  split_tablas.ipynb
reports/figures/: Reporte Conflicto Armado (2022 - 2025).pbix
src/scripts/: mapping.py
